--- a/CarDealer/CarDealer/Views/Car/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarDealerProject.Models.Car
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete car";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h3>Are you sure you want to delete this?</h3>
