--- a/CarDealer/CarDealer/Views/Car/Details.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarDealerProject.Models.Car
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
