--- a/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarDealerProject.Models.CarDealer
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete car dealer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
