--- a/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarDealerProject.Models.CarDealer
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit car dealer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
