--- a/CarDealer/CarDealer/Views/Home/Index.cshtml
+++ b/CarDealer/CarDealer/Views/Home/Index.cshtml
@@ -1,13 +1,10 @@
-﻿@model IEnumerable<CarDealerProject.Models.CarDealer>
-
-@{
+﻿@{
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div>
-    <h1>Index - Home</h1>
+    <h1>Home - Index</h1>
 
     @*@using (Html.BeginForm("Login", "Login"))
     {
