--- a/CarDealer/CarDealer/Views/Person/GetPersons.cshtml
+++ b/CarDealer/CarDealer/Views/Person/GetPersons.cshtml
@@ -1,41 +1,34 @@
 ﻿@model IEnumerable<CarDealerProject.Models.Person>
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.IDCardNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DateOfBirth)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MotherName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AddressID)
+        </th>
+        <th></th>
+    </tr>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>GetPersons</title>
-</head>
-<body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IDCardNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MotherName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AddressID)
-            </th>
-            <th></th>
-        </tr>
-    
-    @foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.IDCardNumber)
@@ -53,13 +46,12 @@
                 @Html.DisplayFor(modelItem => item.AddressID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.IDCardNumber }) |
-                @Html.ActionLink("Details", "Details", new { id=item.IDCardNumber }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.IDCardNumber })
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDCardNumber }) |
+                @Html.ActionLink("Details", "Details", new { id = item.IDCardNumber }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IDCardNumber })
             </td>
         </tr>
     }
-    
-    </table>
-</body>
-</html>
+
+</table>
+
