--- a/CarDealer/CarDealer/Views/Car/All.cshtml
+++ b/CarDealer/CarDealer/Views/Car/All.cshtml
@@ -2,11 +2,9 @@
 @model IEnumerable<Car>
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cars";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 
 <div class="leftmenu">
     @{Html.RenderPartial("Search", new Car());}
@@ -20,6 +18,9 @@
     @{
         Html.RenderPartial("Create", new Car());
     }
+    
 </div>
+
+
 
 <div class="clear"></div>
