--- a/CarDealer/CarDealer/Views/Car/Index.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@model CarDealerProject.Models.Car
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Cars - Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 
 <script type="text/javascript">
     @if (TempData["ErrorMessage"] != null)
@@ -15,7 +13,6 @@
 </script>
 
 <div>
-    <h1>Index - Cars</h1>
     <p>
         <span>@Html.ActionLink("Get Cars", "All")</span>
     </p>
