--- a/CarDealer/CarDealer/Views/CarDealer/All.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/All.cshtml
@@ -2,13 +2,9 @@
 @model IEnumerable<CarDealer>
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Car dealers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
 <div class="leftmenu">
     @{Html.RenderPartial("Search", new CarDealer());}
