--- a/CarDealer/CarDealer/Views/CarDealer/Index.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@model CarDealerProject.Models.CarDealer
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Car dealers -Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 
 <script type="text/javascript">
     @if (TempData["ErrorMessage"] != null)
