--- a/CarDealer/CarDealer/Views/Person/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Delete.cshtml
@@ -1,77 +1,68 @@
 ﻿@model CarDealerProject.Models.Person
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h3>Are you sure you want to delete this?</h3>
+<fieldset>
+    <legend>Person</legend>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
-    <fieldset>
-        <legend>Person</legend>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.IDCardNumber)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.IDCardNumber)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.Name)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.Name)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.DateOfBirth)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.MotherName)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.MotherName)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.AddressID)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.AddressID)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.Telephone)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.Telephone)
-        </div>
-    
-        <div class="display-label">
-             @Html.DisplayNameFor(model => model.Email)
-        </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => model.Email)
-        </div>
-    </fieldset>
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-        <p>
-            <input type="submit" value="Delete" /> |
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.IDCardNumber)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.IDCardNumber)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Name)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Name)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.DateOfBirth)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.DateOfBirth)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.MotherName)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.MotherName)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.AddressID)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.AddressID)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Telephone)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Telephone)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Email)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Email)
+    </div>
+</fieldset>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <p>
+        <input type="submit" value="Delete" />
+        |
             @Html.ActionLink("Back to List", "All")
-        </p>
-    }
-
-</body>
-</html>
+    </p>
+}
