--- a/CarDealer/CarDealer/Views/Person/Index.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Index.cshtml
@@ -1,30 +1,21 @@
 ﻿@model CarDealerProject.Models.Person
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
-   
-    <script type="text/javascript">
-        @if (TempData["ErrorMessage"] != null)
-        {
-            @Html.Raw("showMessageBox('"+@TempData["ErrorMessage"]+"');") 
-        }
-    </script>
-</head>
-<body>
-    <div>
-        <h1>Index - Persons</h1>
-        <p>
-            <span>@Html.ActionLink("Get Persons", "All")</span>
-        </p>
-    </div>
-</body>
-</html>
+<script type="text/javascript">
+    @if (TempData["ErrorMessage"] != null)
+    {
+            @Html.Raw("showMessageBox('" + @TempData["ErrorMessage"] + "');") 
+    }
+</script>
+
+<div>
+    <h1>Index - Persons - persons not used, yet</h1>
+    <p>
+        <span>@Html.ActionLink("Get Persons", "All")</span>
+    </p>
+</div>
+
