--- a/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
@@ -6,20 +6,23 @@
     <meta name="viewport" content="width=device-width" />
     <link href="@Url.Content("~/Content/Styles/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 </head>
 <body class="wrap">
-    <div class="header">
-        <h1>Header</h1>
-        <br />
-        @Html.ActionLink("Home", "Index", "Home") |
-        @Html.ActionLink("Car Dealers", "Index", "CarDealer") |
-        @Html.ActionLink("Cars", "Index", "Car") 
-    </div>
+    <div class="header center">
 
+    </div>
+    <div class="menu">
+            @Html.ActionLink("Home", "Index", "Home") |
+            @Html.ActionLink("Car Dealers", "Index", "CarDealer") |
+            @Html.ActionLink("Cars", "Index", "Car")
+        </div>
     <div>
         @RenderBody()
     </div>
-    
+
     <div class="clear"></div>
 
     <div class="footer">
