--- a/CarDealer/CarDealer/Views/Car/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Edit.cshtml
@@ -5,6 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script src="@Url.Content("~/Scripts/jquery-ui-1.8.24.js")" type="text/javascript"></script>
+<link href="@Url.Content("~/Content/Themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#DDCarDealerName").on("change", function () {
+            $("#CarDealerId").val($(this).find('option:selected').val());
+            $("#CarDealerName").val($(this).find('option:selected').text());
+        });
+        
+        $("#ManufactureDate").datepicker({ dateFormat: 'yy-mm-dd', showAnim: "fadeIn", changeYear: true, yearRange: '-40:+0', maxDate: '+0d' });
+        $("#Year").datepicker({ dateFormat: 'yy', showAnim: "fadeIn", changeYear: true, maxDate: '+0d' });
+    });
+</script>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
