--- a/CarDealer/CarDealer/Views/Person/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Edit.cshtml
@@ -3,6 +3,14 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="@Url.Content("~/Scripts/jquery-ui-1.8.24.js")" type="text/javascript"></script>
+<link href="@Url.Content("~/Content/Themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#DateOfBirth").datepicker({ dateFormat: 'dd/mm/yy', showButtonPanel: true, showAnim: "fadeIn", changeYear: true, yearRange: '-40:+0', minDate: '01/01/1886', maxDate: '+0d' });
+    });
+</script>
 
 @using (Html.BeginForm())
 {
