--- a/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
@@ -11,16 +11,44 @@
     </div>
 
     <div class="display-label">
-        <b>@Html.DisplayNameFor(model => model.AddressId)</b>
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.AddressId)
-    </div>
-
-    <div class="display-label">
         <b>@Html.DisplayNameFor(model => model.ParkingPlaces)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.ParkingPlaces)
+    </div>
+    
+    <div class="display-label">
+        <b>@Html.DisplayNameFor(model => model.Country)</b>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Country)
+    </div>
+    
+    <div class="display-label">
+        <b>@Html.DisplayNameFor(model => model.City)</b>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.City)
+    </div>
+    
+    <div class="display-label">
+        <b>@Html.DisplayNameFor(model => model.ZipCode)</b>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.ZipCode)
+    </div>
+    
+    <div class="display-label">
+        <b>@Html.DisplayNameFor(model => model.Street)</b>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Street)
+    </div>
+    
+        <div class="display-label">
+        <b>@Html.DisplayNameFor(model => model.StreetNumber)</b>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.StreetNumber)
     </div>
 </fieldset>
