--- a/CarDealer/CarDealer/Views/CarDealer/Create.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Create.cshtml
@@ -18,17 +18,7 @@
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Name)</span>
                     </div>
                 </div>
-
-                <div class="textSet">
-                    <div class="editor-label">
-                        @Html.LabelFor(model => model.AddressId)
-                    </div>
-                    <div>
-                        @Html.EditorFor(model => model.AddressId)
-                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.AddressId)</span>
-                    </div>
-                </div>
-
+                
                 <div class="textSet">
                     <div class="editor-label">
                         @Html.LabelFor(model => model.ParkingPlaces)
@@ -36,6 +26,56 @@
                     <div class="editor-field">
                         @Html.EditorFor(model => model.ParkingPlaces)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.ParkingPlaces)</span>
+                    </div>
+                </div>
+                
+                <div class="textSet">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Country)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.Country)
+                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.Country)</span>
+                    </div>
+                </div>
+                
+                <div class="textSet">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.City)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.City)
+                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.City)</span>
+                    </div>
+                </div>
+                
+                <div class="textSet">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.ZipCode)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.ZipCode)
+                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.ZipCode)</span>
+                    </div>
+                </div>
+                
+                <div class="textSet">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Street)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.Street)
+                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.Street)</span>
+                    </div>
+                </div>
+                
+                <div class="textSet">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.StreetNumber)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.StreetNumber)
+                        <span class="errorMessage">@Html.ValidationMessageFor(model => model.StreetNumber)</span>
                     </div>
                 </div>
 
