--- a/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Delete.cshtml
@@ -7,15 +7,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 
-@{
-    Html.RenderPartial("SingleDataContainer", Model);
-}
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+
+    Html.RenderPartial("SingleDataContainer", Model);
+    
     <p>
-        <input type="submit" value="Delete" /> |
+        <input type="submit" value="Delete" />
+        |
         @Html.ActionLink("Back to List", "All")
     </p>
 }
