--- a/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Edit.cshtml
@@ -11,32 +11,77 @@
     @Html.ValidationSummary(true)
     
     <fieldset>
-        <legend>CarDealer</legend>
+        <legend>Car dealer</legend>
 
-        @Html.HiddenFor(model => model.Id)
+        <div class="textSet">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Name)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
-            @Html.ValidationMessageFor(model => model.Name)
+        
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.ParkingPlaces)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.ParkingPlaces)
+                @Html.ValidationMessageFor(model => model.ParkingPlaces)
+            </div>
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.AddressId)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.AddressId)
-            @Html.ValidationMessageFor(model => model.AddressId)
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Country)
+            </div>
+            <div>
+                @Html.EditorFor(model => model.Country)
+                <span class="errorMessage">@Html.ValidationMessageFor(model => model.Country)</span>
+            </div>
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ParkingPlaces)
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.City)
+            </div>
+            <div>
+                @Html.EditorFor(model => model.City)
+                <span class="errorMessage">@Html.ValidationMessageFor(model => model.City)</span>
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.ParkingPlaces)
-            @Html.ValidationMessageFor(model => model.ParkingPlaces)
+
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.ZipCode)
+            </div>
+            <div>
+                @Html.EditorFor(model => model.ZipCode)
+                <span class="errorMessage">@Html.ValidationMessageFor(model => model.ZipCode)</span>
+            </div>
+        </div>
+
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Street)
+            </div>
+            <div>
+                @Html.EditorFor(model => model.Street)
+                <span class="errorMessage">@Html.ValidationMessageFor(model => model.Street)</span>
+            </div>
+        </div>
+
+        <div class="textSet">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.StreetNumber)
+            </div>
+            <div>
+                @Html.EditorFor(model => model.StreetNumber)
+                <span class="errorMessage">@Html.ValidationMessageFor(model => model.StreetNumber)</span>
+            </div>
         </div>
 
         <p>
